generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider     = "postgresql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

enum SessionStatusDb {
  active
  archived
  deleted

  @@map("session_status")
}

enum MessageRoleDb {
  user
  assistant
  agent
  system
  tool

  @@map("message_role")
}

enum RunStatusDb {
  queued
  context_building
  connecting
  running
  completed
  failed
  cancelled

  @@map("run_status")
}

enum AgentStatusDb {
  enabled
  disabled
  offline
  error

  @@map("agent_status")
}

enum MessageStatusDb {
  queued
  thinking
  streaming
  completed
  failed
  cancelled

  @@map("message_status")
}

enum ArtifactKindDb {
  markdown
  text
  html
  pdf
  docx
  pptx
  image
  archive
  log
  other

  @@map("artifact_kind")
}

enum StorageKindDb {
  inline_text
  oss_object
  remote_url

  @@map("storage_kind")
}

enum FileChangeTypeDb {
  added
  modified
  deleted
  renamed

  @@map("file_change_type")
}

enum ContextItemKindDb {
  message
  artifact
  file_change
  run_summary
  manual_pin

  @@map("context_item_kind")
}

model Provider {
  id             Int    @id @default(autoincrement())
  name           String @unique

  @@map("providers")
}

model User {
  id           String    @id @default(uuid()) @db.Uuid
  username     String    @unique
  displayName  String?   @map("display_name")
  avatarUrl    String?   @map("avatar_url")
  passwordHash String    @map("password_hash")
  status       String    @default("active")
  lastLoginAt  DateTime? @map("last_login_at") @db.Timestamptz(6)
  createdAt    DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@map("users")
}

model AgentTemplate {
  id                  Int           @id @default(autoincrement())
  name                String
  description         String        @default("")
  defaultProviderId   Int           @map("default_provider_id")
  systemPrompt        String        @default("") @map("system_prompt")
  promptConfig        Json          @default("{}") @map("prompt_config")
  defaultCapabilities Json          @default("[]") @map("default_capabilities")
  defaultModelConfig  Json          @default("{}") @map("default_model_config")
  metadata            Json          @default("{}")
  status              AgentStatusDb @default(enabled)
  createdAt           DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt           DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)
  agents              Agent[]

  @@map("agent_templates")
}

model BuildSession {
  id              String         @id @default(uuid()) @db.Uuid
  status          String         @default("active") // active | completed | cancelled
  context         Json           @default("{}")
  agentTemplateId Int?           @map("agent_template_id")
  createdAt       DateTime       @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt       DateTime       @updatedAt @map("updated_at") @db.Timestamptz(6)
  messages        BuildMessage[]

  @@map("build_sessions")
}

model BuildMessage {
  id              String       @id @default(uuid()) @db.Uuid
  buildSessionId  String       @map("build_session_id") @db.Uuid
  role            String       // user | assistant
  content         String       @default("")
  createdAt       DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)
  buildSession    BuildSession @relation(fields: [buildSessionId], references: [id], onDelete: Cascade)

  @@index([buildSessionId, createdAt], map: "idx_build_messages_session_created")
  @@map("build_messages")
}

model Agent {
  id                    Int           @id @default(autoincrement())
  templateId            Int           @map("template_id")
  name                  String        @unique
  avatarUrl             String?       @map("avatar_url")
  description           String        @default("")
  providerId            Int           @map("provider_id")
  isDefaultOrchestrator Boolean       @default(false) @map("is_default_orchestrator")
  status                AgentStatusDb @default(offline)
  createdAt             DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt             DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)
  template              AgentTemplate @relation(fields: [templateId], references: [id], onDelete: Restrict)
  sessionAgents         SessionAgent[]
  messages              Message[]
  runs                  AgentRun[]
  events                AgentEvent[]

  @@index([templateId], map: "idx_agents_template")
  @@index([isDefaultOrchestrator], map: "idx_agents_default_orchestrator")
  @@map("agents")
}

model Session {
  id                   String             @id @default(uuid()) @db.Uuid
  title                String             @default("Untitled Session")
  status               SessionStatusDb    @default(active)
  projectId            String?            @map("project_id") @db.Uuid
  downstreamSessionId  String?            @map("downstream_session_id")
  metadata             Json               @default("{}")
  createdAt            DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt            DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)
  participants     SessionAgent[]
  messages         Message[]
  runs             AgentRun[]
  contextSnapshots ContextSnapshot[]
  events           AgentEvent[]
  artifacts        Artifact[]
  fileChanges      FileChange[]
  contextItems     ContextItem[]
  contextEmbeddings ContextEmbedding[]
  contextUpdateJobs ContextUpdateJob[]
  longTermSummaries LongTermSummary[]
  project          Project?           @relation(fields: [projectId], references: [id], onDelete: SetNull)
  deployments      Deployment[]

  @@index([updatedAt(sort: Desc)], map: "idx_sessions_updated_at")
  @@index([status, updatedAt(sort: Desc), id(sort: Desc)], map: "idx_sessions_status_updated_id")
  @@index([projectId], map: "idx_sessions_project_id")
  @@map("sessions")
}

model Project {
  id            String       @id @default(uuid()) @db.Uuid
  name          String
  githubUrl     String       @map("github_url")
  defaultBranch String       @default("main") @map("default_branch")
  status        String       @default("active")
  metadata      Json         @default("{}")
  createdAt     DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime     @updatedAt @map("updated_at") @db.Timestamptz(6)
  sessions      Session[]
  deployments   Deployment[]

  @@index([status, updatedAt(sort: Desc)], map: "idx_projects_status_updated")
  @@map("projects")
}

model Deployment {
  id                 String    @id @default(uuid()) @db.Uuid
  sessionId          String    @map("session_id") @db.Uuid
  projectId          String    @map("project_id") @db.Uuid
  triggerMessageId   String?   @map("trigger_message_id") @db.Uuid
  commitSha          String    @map("commit_sha")
  status             String    @default("queued")
  deployServiceJobId String?   @map("deploy_service_job_id")
  url                String?
  errorMessage       String?   @map("error_message")
  metadata           Json      @default("{}")
  createdAt          DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt          DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  completedAt        DateTime? @map("completed_at") @db.Timestamptz(6)
  session            Session   @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  project            Project   @relation(fields: [projectId], references: [id], onDelete: Restrict)

  @@index([sessionId, createdAt(sort: Desc)], map: "idx_deployments_session_created")
  @@index([projectId, createdAt(sort: Desc)], map: "idx_deployments_project_created")
  @@map("deployments")
}

model SessionAgent {
  sessionId        String    @map("session_id") @db.Uuid
  agentId          Int       @map("agent_id")
  participantRole  String    @default("member") @map("participant_role")
  source           String    @default("mention")
  firstMentionedAt DateTime? @map("first_mentioned_at") @db.Timestamptz(6)
  lastActiveAt     DateTime? @map("last_active_at") @db.Timestamptz(6)
  createdAt        DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  session          Session   @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  agent            Agent     @relation(fields: [agentId], references: [id], onDelete: Cascade)

  @@id([sessionId, agentId])
  @@map("session_agents")
}

model Message {
  id              String          @id @default(uuid()) @db.Uuid
  sessionId       String          @map("session_id") @db.Uuid
  runId           String?         @map("run_id") @db.Uuid
  role            MessageRoleDb
  agentId         Int?            @map("agent_id")
  parentMessageId String?         @map("parent_message_id") @db.Uuid
  contentText     String          @default("") @map("content_text")
  contentJson     Json            @default("{}") @map("content_json")
  tokenCount      Int             @default(0) @map("token_count")
  status          MessageStatusDb @default(completed)
  isPinned        Boolean         @default(false) @map("is_pinned")
  createdAt       DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt       DateTime        @updatedAt @map("updated_at") @db.Timestamptz(6)
  session         Session         @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  agent           Agent?          @relation(fields: [agentId], references: [id], onDelete: SetNull)

  @@index([sessionId, createdAt], map: "idx_messages_session_created")
  @@index([sessionId, createdAt(sort: Desc), id(sort: Desc)], map: "idx_messages_session_created_desc_id")
  @@index([sessionId, isPinned], map: "idx_messages_pinned")
  @@index([sessionId, status], map: "idx_messages_status")
  @@map("messages")
}

model ContextSnapshot {
  id              String   @id @default(uuid()) @db.Uuid
  sessionId       String   @map("session_id") @db.Uuid
  runId           String?  @map("run_id") @db.Uuid
  version         Int      @default(1)
  tokenBudget     Int      @map("token_budget")
  tokenCount      Int      @default(0) @map("token_count")
  selectedItemIds String[] @default([]) @map("selected_item_ids")
  snapshotJson    Json     @map("snapshot_json")
  promptText      String   @default("") @map("prompt_text")
  createdAt       DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  session         Session  @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@map("context_snapshots")
}

model AgentRun {
  id                  String      @id @default(uuid()) @db.Uuid
  sessionId           String      @map("session_id") @db.Uuid
  orchestratorAgentId Int         @map("orchestrator_agent_id")
  userMessageId       String?     @map("user_message_id") @db.Uuid
  assistantMessageId  String?     @map("assistant_message_id") @db.Uuid
  contextSnapshotId   String?     @map("context_snapshot_id") @db.Uuid
  status              RunStatusDb @default(queued)
  downstreamSessionId String?     @map("downstream_session_id")
  downstreamRunId     String?     @map("downstream_run_id")
  errorCode           String?     @map("error_code")
  errorMessage        String?     @map("error_message")
  usageJson           Json        @default("{}") @map("usage_json")
  startedAt           DateTime?   @map("started_at") @db.Timestamptz(6)
  completedAt         DateTime?   @map("completed_at") @db.Timestamptz(6)
  createdAt           DateTime    @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt           DateTime    @updatedAt @map("updated_at") @db.Timestamptz(6)
  session             Session     @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  orchestratorAgent   Agent       @relation(fields: [orchestratorAgentId], references: [id], onDelete: Restrict)
  events              AgentEvent[]
  artifacts           Artifact[]
  fileChanges         FileChange[]

  @@index([sessionId, createdAt(sort: Desc)], map: "idx_agent_runs_session_created")
  @@index([status], map: "idx_agent_runs_status")
  @@map("agent_runs")
}

model AgentEvent {
  id             String    @id @default(uuid()) @db.Uuid
  sessionId      String    @map("session_id") @db.Uuid
  runId          String    @map("run_id") @db.Uuid
  seq            BigInt
  source         String    @default("downstream_agent")
  eventType      String    @map("event_type")
  visibility     String    @default("public")
  speakerAgentId Int?      @map("speaker_agent_id")
  speakerName    String?   @map("speaker_name")
  payload        Json
  occurredAt     DateTime? @map("occurred_at") @db.Timestamptz(6)
  persistedAt    DateTime  @default(now()) @map("persisted_at") @db.Timestamptz(6)
  session        Session   @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  run            AgentRun  @relation(fields: [runId], references: [id], onDelete: Cascade)
  speakerAgent   Agent?    @relation(fields: [speakerAgentId], references: [id], onDelete: SetNull)

  @@unique([runId, seq])
  @@index([runId, seq], map: "idx_agent_events_run_seq")
  @@index([sessionId, persistedAt], map: "idx_agent_events_session_persisted")
  @@map("agent_events")
}

model Artifact {
  id               String        @id @default(uuid()) @db.Uuid
  sessionId        String        @map("session_id") @db.Uuid
  runId            String?       @map("run_id") @db.Uuid
  producingEventId String?       @map("producing_event_id") @db.Uuid
  artifactKey      String?       @map("artifact_key")
  kind             ArtifactKindDb
  title            String
  mimeType         String        @default("application/octet-stream") @map("mime_type")
  storageKind      StorageKindDb @default(inline_text) @map("storage_kind")
  storageUri       String?       @map("storage_uri")
  textContent      String?       @map("text_content")
  sha256           String?
  sizeBytes        BigInt?       @map("size_bytes")
  version          Int           @default(1)
  final            Boolean       @default(false)
  metadata         Json          @default("{}")
  createdAt        DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt        DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)
  session          Session       @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  run              AgentRun?     @relation(fields: [runId], references: [id], onDelete: SetNull)
  fileChanges      FileChange[]

  @@unique([runId, artifactKey])
  @@index([sessionId, updatedAt(sort: Desc)], map: "idx_artifacts_session_updated")
  @@map("artifacts")
}

model FileChange {
  id               String           @id @default(uuid()) @db.Uuid
  sessionId        String           @map("session_id") @db.Uuid
  runId            String           @map("run_id") @db.Uuid
  artifactId       String?          @map("artifact_id") @db.Uuid
  producingEventId String?          @map("producing_event_id") @db.Uuid
  path             String
  oldPath          String?          @map("old_path")
  changeType       FileChangeTypeDb @map("change_type")
  language         String?
  beforeContent    String?          @map("before_content")
  beforeSha256     String?          @map("before_sha256")
  beforeTruncated  Boolean          @default(false) @map("before_truncated")
  afterContent     String?          @map("after_content")
  afterSha256      String?          @map("after_sha256")
  afterTruncated   Boolean          @default(false) @map("after_truncated")
  patch            String?
  stats            Json             @default("{}")
  metadata         Json             @default("{}")
  createdAt        DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)
  session          Session          @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  run              AgentRun         @relation(fields: [runId], references: [id], onDelete: Cascade)
  artifact         Artifact?        @relation(fields: [artifactId], references: [id], onDelete: SetNull)

  @@index([runId, path], map: "idx_file_changes_run_path")
  @@map("file_changes")
}

model ContextItem {
  id                String             @id @default(uuid()) @db.Uuid
  sessionId         String             @map("session_id") @db.Uuid
  sourceType        String             @map("source_type")
  sourceId          String?            @map("source_id") @db.Uuid
  kind              ContextItemKindDb
  text              String
  tokenCount        Int                @default(0) @map("token_count")
  importance        Int                @default(0)
  pinned            Boolean            @default(false)
  metadata          Json               @default("{}")
  createdAt         DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)
  session           Session            @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  contextEmbeddings ContextEmbedding[]

  @@index([sessionId, kind, createdAt(sort: Desc)], map: "idx_context_items_session_kind")
  @@index([sessionId, pinned], map: "idx_context_items_pinned")
  @@map("context_items")
}

model ContextEmbedding {
  id            String                    @id @default(uuid()) @db.Uuid
  contextItemId String                    @map("context_item_id") @db.Uuid
  sessionId     String                    @map("session_id") @db.Uuid
  model         String
  dims          Int                       @default(1536)
  embedding     Unsupported("vector(1536)")
  createdAt     DateTime                  @default(now()) @map("created_at") @db.Timestamptz(6)
  contextItem   ContextItem               @relation(fields: [contextItemId], references: [id], onDelete: Cascade)
  session       Session                   @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@unique([contextItemId, model])
  @@index([sessionId], map: "idx_context_embeddings_session")
  @@map("context_embeddings")
}

model ContextUpdateJob {
  id           String    @id @default(uuid()) @db.Uuid
  sessionId    String    @map("session_id") @db.Uuid
  reason       String
  status       String    @default("pending")
  errorMessage String?   @map("error_message")
  createdAt    DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  startedAt    DateTime? @map("started_at") @db.Timestamptz(6)
  completedAt  DateTime? @map("completed_at") @db.Timestamptz(6)
  session      Session   @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@map("context_update_jobs")
}

model LongTermSummary {
  id         String   @id @default(uuid()) @db.Uuid
  sessionId  String   @map("session_id") @db.Uuid
  seq        Int
  content    String   @default("")
  tokenCount Int      @default(0) @map("token_count")
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  session    Session  @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@index([sessionId, seq], map: "idx_long_term_summaries_session_seq")
  @@map("long_term_summaries")
}

model SessionMemory {
  id        String   @id @default(uuid()) @db.Uuid
  sessionId String   @unique @map("session_id") @db.Uuid
  title     String?
  status    String?
  files     Json     @default("[]")
  errors    Json     @default("[]")
  lessons   String?
  workLog   Json     @default("[]") @map("work_log")
  version   Int      @default(1)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("session_memories")
}
