erDiagram
    Session ||--o{ ContextItem : "has"
    Session ||--o{ ContextEmbedding : "has"
    Session ||--o{ ContextSnapshot : "has"
    Session ||--o{ ContextUpdateJob : "has"
    Session ||--o{ LongTermSummary : "has"
    Session ||--|| SessionMemory : "has"
    Session ||--o{ Artifact : "has"
    Session ||--o{ AgentRun : "has"
    Session ||--o{ Message : "has"
    Session ||--o{ FileChange : "has"
    Session ||--o{ AgentEvent : "has"
    Session ||--o{ SessionAgent : "has"
    AgentRun ||--o{ Artifact : "generates"
    AgentRun ||--o{ FileChange : "generates"
    AgentRun ||--o{ AgentEvent : "generates"
    ContextItem ||--|| ContextEmbedding : "has vector"
    Agent ||--o{ SessionAgent : "joins"
    Agent ||--o{ AgentRun : "orchestrates"
    Artifact ||--o{ FileChange : "linked to"

    Session {
        uuid id PK
        string title
        string status "active|archived|deleted"
        string projectId FK
        string downstreamSessionId
        json metadata
    }

    ContextItem {
        uuid id PK
        uuid sessionId FK
        string sourceType
        uuid sourceId FK
        string kind "message|artifact|file_change|manual_pin"
        string text
        int tokenCount
        int importance
        bool pinned
        json metadata
    }

    ContextEmbedding {
        uuid id PK
        uuid contextItemId FK
        uuid sessionId FK
        string model "text-embedding-3-small"
        int dims "1536"
        vector embedding "1536维向量"
    }

    ContextSnapshot {
        uuid id PK
        uuid sessionId FK
        uuid runId FK
        int version
        int tokenBudget "9000"
        int tokenCount
        string[] selectedItemIds
        json snapshotJson
        string promptText
    }

    SessionMemory {
        uuid id PK
        uuid sessionId UK
        string title
        string status
        json files
        json errors
        string lessons
        json workLog
        int version
    }

    Artifact {
        uuid id PK
        uuid sessionId FK
        uuid runId FK
        string artifactKey
        string kind "markdown|text|html"
        string title
        string mimeType
        string storageKind "inline|oss|remote"
        string storageUri
        string textContent
        string sha256
        bigint sizeBytes
    }

    AgentRun {
        uuid id PK
        uuid sessionId FK
        int orchestratorAgentId FK
        uuid userMessageId FK
        uuid contextSnapshotId FK
        string status "queued|running|completed|failed"
        string downstreamSessionId
        string errorCode
        json usageJson
    }

    Message {
        uuid id PK
        uuid sessionId FK
        uuid runId FK
        string role "user|assistant|agent"
        int agentId FK
        string contentText
        json contentJson
        int tokenCount
        bool isPinned
    }

    Agent {
        int id PK
        string name UK
        int templateId FK
        string description
        bool isDefaultOrchestrator
        string status
    }

    SessionAgent {
        uuid sessionId PK_FK
        int agentId PK_FK
        string participantRole
        string source
    }

    AgentEvent {
        uuid id PK
        uuid sessionId FK
        uuid runId FK
        bigint seq
        string eventType
        int speakerAgentId FK
        json payload
    }

    FileChange {
        uuid id PK
        uuid sessionId FK
        uuid runId FK
        uuid artifactId FK
        string path
        string changeType
        string beforeContent
        string afterContent
        string patch
    }

    ContextUpdateJob {
        uuid id PK
        uuid sessionId FK
        string reason
        string status
        string errorMessage
    }

    LongTermSummary {
        uuid id PK
        uuid sessionId FK
        int seq
        string content
        int tokenCount
    }